Improved `README.md`, fixed a notebook

--- a/notebooks/etl_and_upsertion.ipynb
+++ b/notebooks/etl_and_upsertion.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Onedot | DATA ENGINEER"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     " The first step consists in the initialization of the Spark session. We will import some libraries from the Maven repository.\n",
     " - `com.crealytics:spark-excel_2.11` allows to read `.xlsx` data as Spark DataFrame\n",
@@ -17,7 +9,10 @@
     "   It introduces many advantages, as well as automatic optimization mechanisms and performance improvements in most cases          (https://www.bbva.com/en/delta-lake-power-up-your-data/) \n",
     " \n",
     " The first time this step is executed, It may require few moments depending on the internet speed. After that, the libraries with be locally cached."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
