--- a/notebooks/word_count.ipynb
+++ b/notebooks/word_count.ipynb
@@ -103,13 +103,13 @@
    "metadata": {},
    "source": [
     "In order to reach our aim, the following code: \n",
-    "* Exclude all the rows whose start is different from \"BG:\".\n",
-    "* Remove all the punctuation\n",
-    "* Split each row on blanks\n",
-    "* Remove from each resulting array all the empty strings\n",
-    "* Remove the `BG`'s ([sorry guys](https://images-na.ssl-images-amazon.com/images/I/71Qh%2BLuRE0L._AC_SX522_.jpg))\n",
-    "* Count the number of words for each row\n",
-    "* Sum the number of of words in each row"
+    "* Excludes all the rows whose start is different from \"BG:\".\n",
+    "* Removes all the punctuation\n",
+    "* Splits each row on blanks\n",
+    "* Removes from each resulting array all the empty strings\n",
+    "* Removes the `BG`'s ([sorry guys](https://images-na.ssl-images-amazon.com/images/I/71Qh%2BLuRE0L._AC_SX522_.jpg))\n",
+    "* Counts the number of words for each row\n",
+    "* Sums the number of of words in each row"
    ]
   },
   {
